# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/config/features.gni")

brave_browser_infobar_sources = []
brave_browser_infobar_deps = []

if (!is_android) {
  brave_browser_infobar_sources += [
    "//unknown/browser/infobars/brave_confirm_infobar_creator.h",
    "//unknown/browser/infobars/brave_confirm_p3a_infobar_delegate.cc",
    "//unknown/browser/infobars/brave_confirm_p3a_infobar_delegate.h",
    "//unknown/browser/infobars/brave_sync_account_deleted_infobar_delegate.cc",
    "//unknown/browser/infobars/brave_sync_account_deleted_infobar_delegate.h",
    "//unknown/browser/infobars/dev_channel_deprecation_infobar_delegate.cc",
    "//unknown/browser/infobars/dev_channel_deprecation_infobar_delegate.h",
    "//unknown/browser/infobars/request_otr_infobar_delegate.cc",
    "//unknown/browser/infobars/request_otr_infobar_delegate.h",
    "//unknown/browser/infobars/sync_cannot_run_infobar_delegate.cc",
    "//unknown/browser/infobars/sync_cannot_run_infobar_delegate.h",
  ]

  brave_browser_infobar_deps += [
    "//base",
    "//unknown/app:brave_generated_resources_grit",
    "//unknown/common",
    "//unknown/components/brave_sync:features",
    "//unknown/components/brave_sync:prefs",
    "//unknown/components/constants",
    "//unknown/components/infobars/core",
    "//unknown/components/p3a",
    "//chrome/app:branded_strings",
    "//chrome/browser/ui",
    "//components/infobars/content",
    "//components/infobars/core",
    "//components/prefs",
    "//components/strings",
    "//ui/base",
    "//ui/views",
    "//url",
  ]
}
