# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//unknown/components/ai_chat/core/common/buildflags/buildflags.gni")

# These files needs access to some files in chrome/browser target.
brave_browser_misc_metrics_sources = [
  "//unknown/browser/misc_metrics/profile_misc_metrics_service.cc",
  "//unknown/browser/misc_metrics/profile_misc_metrics_service_factory.cc",
  "//unknown/browser/misc_metrics/uptime_monitor_impl.cc",
]

brave_browser_misc_metrics_deps = [
  "//unknown/browser:browser_process",
  "//unknown/browser/profiles:util",
  "//unknown/components/ai_chat/core/common/buildflags",
  "//unknown/components/misc_metrics",
  "//unknown/components/ntp_background_images/browser",
  "//unknown/components/ntp_background_images/common",
  "//chrome/browser:browser_process",
  "//chrome/browser/profiles",
  "//components/keyed_service/content",
  "//components/keyed_service/core",
  "//content/public/browser",
]

if (enable_ai_chat) {
  brave_browser_misc_metrics_deps +=
      [ "//unknown/components/ai_chat/core/browser" ]
}

if (!is_android) {
  brave_browser_misc_metrics_sources += [
    "//unknown/browser/misc_metrics/default_browser_monitor.cc",
    "//unknown/browser/misc_metrics/profile_new_tab_metrics.cc",
    "//unknown/browser/misc_metrics/profile_new_tab_metrics.h",
  ]

  brave_browser_misc_metrics_deps +=
      [ "//unknown/browser/misc_metrics:usage_clock" ]
}

brave_browser_misc_metrics_android_sources = [
  "//unknown/browser/misc_metrics/misc_android_metrics.cc",
  "//unknown/browser/misc_metrics/misc_android_metrics_factory_android.cc",
]
